# peek

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-08-peek-tamagotchi.md  2026-05-08-peek-web.md
docs/superpowers/specs/: 2026-05-08-peek-tamagotchi-design.md  2026-05-08-peek-web-design.md
peek-cli/: Cargo.toml
peek-cli/src/: main.rs
peek-cli/src/cmd/: bury.rs  hatch.rs  mod.rs  path.rs  tick.rs  tui.rs
peek-content/: Cargo.toml
peek-content/chapters/: ch01-programs-and-os.md  ch02-syscalls.md  ch03-memory-and-mmap.md
peek-content/dialogue/: lines.ron
peek-content/questions/: bank.ron
peek-content/sprites/: cogent_anxious_0.txt  cogent_anxious_1.txt  conduit_anxious_0.txt  conduit_anxious_1.txt  egg_anxious_0.txt  egg_anxious_1.txt  knot_anxious_0.txt  knot_anxious_1.txt  mawling_anxious_0.txt  mawling_anxious_1.txt  sprout_anxious_0.txt  sprout_anxious_1.txt
peek-content/src/: lib.rs
peek-core/: Cargo.toml
peek-core/src/: care.rs  chapter.rs  creature.rs  decay.rs  lib.rs  memorial.rs  mood.rs  mutation.rs  question.rs  recall.rs  stage.rs  state.rs  stats.rs
peek-core/src/generators/: bit_ops.rs  mod.rs  pointer_arithmetic.rs  registry.rs  syscall_trace.rs
peek-tui/: Cargo.toml
peek-tui/src/: app.rs  chrome.rs  input.rs  lib.rs  scene.rs  scene_runner.rs  sprite.rs  theme.rs
peek-tui/src/scenes/: death.rs  demo.rs  evolve.rs  hatch.rs  idle.rs  intro.rs  mod.rs  quiz.rs  read.rs
peek-web/: Cargo.toml  Trunk.toml  index.html  style.css
peek-web/src/: lib.rs  storage.rs
scripts/: vocab-lint.sh
