[package]
name = "peek-content"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PEEK embedded curriculum, question bank, sprite art, and dialogue lines."

[dependencies]
peek-core = { path = "../peek-core" }
serde = { workspace = true }
ron = { workspace = true }
rust-embed = { workspace = true }
anyhow = { workspace = true }
