[package]
name = "peek-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PEEK TUI scenes and widgets (ratatui)."

[dependencies]
peek-core = { path = "../peek-core" }
peek-content = { path = "../peek-content" }
ratatui = { version = "0.29", default-features = false }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
