[package]
name = "peek-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PEEK browser build (ratzilla + WebAssembly). Loads/saves state in localStorage."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
peek-core = { path = "../peek-core" }
peek-content = { path = "../peek-content" }
peek-tui = { path = "../peek-tui" }
ratatui = { version = "0.29", default-features = false }
ratzilla = "0.2"
chrono = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Storage", "Document", "HtmlElement"]
